:ok_hand: overridden some css from bootstrap main

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,3 +1,17 @@
+/*CUSTOM STYLE*/
+.navbar{
+    margin-bottom: 0!important;
+}
+
+
+
+
+
+
+
+
+
+/*AUTO GENERATED */
 .browsehappy {
   margin: 0.2em 0;
   background: #ccc;
