--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,17 +1,39 @@
+/*FONT REQ*/
+@import 'https://fonts.googleapis.com/css?family=Roboto:300,400,500';
+
 /*CUSTOM STYLE*/
 .navbar{
     margin-bottom: 0!important;
 }
 #brand{
+    margin-left:20px;
     margin-top: 5px;
-    float:left;
+    /*float:left;*/
     width: 159px;
     height: 37px;
     background-image: url("http://static-content.como.com/comowebsite/2016/01/11142201/logo-sprite-como-1.png");
 }
 #pageTitle{
-    color:whitesmoke;
-    text-align: center;
+    color:rgba(255,255,255,0.95);
+    /*text-align: center;*/
+    font-family: 'Roboto', sans-serif;
+    font-weight: 200;
+}
+#pageCreator{
+    font-size: 20px;
+    float: right;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 100;
+    color:rgba(255,255,255,0.85)
+}
+.container-override{
+    display: inline-block;
+    padding-top: 20px;
+    padding-left: 0;
+    padding-right: 0;
+    max-width: none!important;
+    margin: 0 !important;
+    width:100%;
 }
 
 
@@ -24,85 +46,85 @@
 
 /*AUTO GENERATED */
 .browsehappy {
-  margin: 0.2em 0;
-  background: #ccc;
-  color: #000;
-  padding: 0.2em 0;
+    margin: 0.2em 0;
+    background: #ccc;
+    color: #000;
+    padding: 0.2em 0;
 }
 
 body {
-  padding: 0;
+    padding: 0;
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
 .header,
 .marketing,
 .footer {
-  padding-left: 15px;
-  padding-right: 15px;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 /* Custom page header */
 .header {
-  border-bottom: 1px solid #e5e5e5;
-  margin-bottom: 10px;
+    border-bottom: 1px solid #e5e5e5;
+    margin-bottom: 10px;
 }
 /* Make the masthead heading the same height as the navigation */
 .header h3 {
-  margin-top: 0;
-  margin-bottom: 0;
-  line-height: 40px;
-  padding-bottom: 19px;
+    margin-top: 0;
+    margin-bottom: 0;
+    line-height: 40px;
+    padding-bottom: 19px;
 }
 
 /* Custom page footer */
 .footer {
-  padding-top: 19px;
-  color: #777;
-  border-top: 1px solid #e5e5e5;
+    padding-top: 19px;
+    color: #777;
+    border-top: 1px solid #e5e5e5;
 }
 
 .container-narrow > hr {
-  margin: 30px 0;
+    margin: 30px 0;
 }
 
 /* Main marketing message and sign up button */
 .jumbotron {
-  text-align: center;
-  border-bottom: 1px solid #e5e5e5;
+    text-align: center;
+    border-bottom: 1px solid #e5e5e5;
 }
 .jumbotron .btn {
-  font-size: 21px;
-  padding: 14px 24px;
+    font-size: 21px;
+    padding: 14px 24px;
 }
 
 /* Supporting marketing content */
 .marketing {
-  margin: 40px 0;
+    margin: 40px 0;
 }
 .marketing p + h4 {
-  margin-top: 28px;
+    margin-top: 28px;
 }
 
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
-  .container {
-    max-width: 730px;
-  }
+    .container {
+        max-width: 730px;
+    }
 
-  /* Remove the padding we set earlier */
-  .header,
-  .marketing,
-  .footer {
-    padding-left: 0;
-    padding-right: 0;
-  }
-  /* Space out the masthead */
-  .header {
-    margin-bottom: 30px;
-  }
-  /* Remove the bottom border on the jumbotron for visual effect */
-  .jumbotron {
-    border-bottom: 0;
-  }
+    /* Remove the padding we set earlier */
+    .header,
+    .marketing,
+    .footer {
+        padding-left: 0;
+        padding-right: 0;
+    }
+    /* Space out the masthead */
+    .header {
+        margin-bottom: 30px;
+    }
+    /* Remove the bottom border on the jumbotron for visual effect */
+    .jumbotron {
+        border-bottom: 0;
+    }
 }
