--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -5,6 +5,9 @@
 .width-100{
     width:100%
 }
+.top-pad-10{
+    padding-top: 10px;
+}
 .navbar{
     margin-bottom: 0!important;
 }
@@ -31,7 +34,7 @@
 }
 .container-override{
     display: inline-block;
-    padding-top: 20px;
+    /*padding-top: 20px;*/
     padding-left: 0;
     padding-right: 0;
     max-width: none!important;
@@ -69,8 +72,7 @@ body {
 
 /* Custom page header */
 .header {
-    border-bottom: 1px solid #e5e5e5;
-    margin-bottom: 10px;
+    /*border-bottom: 1px solid #e5e5e5;*/
 }
 /* Make the masthead heading the same height as the navigation */
 .header h3 {
@@ -121,10 +123,6 @@ body {
     .footer {
         padding-left: 0;
         padding-right: 0;
-    }
-    /* Space out the masthead */
-    .header {
-        margin-bottom: 30px;
     }
     /* Remove the bottom border on the jumbotron for visual effect */
     .jumbotron {
