:nail_care: Done dividing the screen

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,6 +1,14 @@
 /*FONT REQ*/
 @import 'https://fonts.googleapis.com/css?family=Roboto:300,400,500';
 
+/*DOM bound css*/
+body, html {
+    height:100%;
+}
+.height-100{
+    height:100%;
+}
+
 /*CUSTOM STYLE*/
 .width-100{
     width:100%
