--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,8 +1,8 @@
-<div class="row">
-    <div class="col-md-7" style="background-color: yellow">
+<div class="row height-100">
+    <div class="col-md-7 height-100" style="background-color: yellow;">
         Left segment
     </div>
-    <div class="col-md-5" style="background-color: #080808">
+    <div class="col-md-5 height-100" style="background-color: #080808">
         Right
     </div>
 </div>
