:construction: Creating components

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,8 +1,8 @@
-<div class="row height-100">
-    <div class="col-md-7 height-100" style="background-color: yellow;">
-        Left segment
+<div class="row height-100 max-width margin-auto">
+    <div class="col-md-6 " style="background-color: yellow;">
+       text <app-editor />
     </div>
-    <div class="col-md-5 height-100" style="background-color: #080808">
+    <div class="col-md-6 " style="background-color: #080808;">
         Right
     </div>
 </div>
