--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -4,14 +4,26 @@
 /*DOM bound css*/
 body, html {
     height:100%;
+    width:100%;
+    margin:0;
+    padding:0;
 }
 .height-100{
     height:100%;
 }
-
+.no-padding{
+    padding:0;
+}
+.max-width {
+    max-width: 100%;
+}
+.margin-auto {
+    margin: auto;
+}
 /*CUSTOM STYLE*/
 .width-100{
-    width:100%
+    width:100%;
+    max-width:100%;
 }
 .top-pad-10{
     padding-top: 10px;
