:relaxed: Components work, lets go!

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,6 +1,6 @@
 <div class="row height-100 max-width margin-auto">
     <div class="col-md-6 " style="background-color: yellow;">
-       text <app-editor />
+       <app-editor data="main.dummy"/>
     </div>
     <div class="col-md-6 " style="background-color: #080808;">
         Right
