--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,8 +1,8 @@
 <div class="row height-100 max-width margin-auto">
     <div class="col-md-6 " style="background-color: yellow;">
-       <app-editor data="main.dummy"/>
+        <app-editor/>
     </div>
     <div class="col-md-6 " style="background-color: #080808;">
-        Right
+        <device-preview screen="main.currentScreen"/>
     </div>
 </div>
