:rainbow: New device preview

--- a/app/components/devicePreview/DevicePreview.html
+++ b/app/components/devicePreview/DevicePreview.html
@@ -1,1 +1,16 @@
-<p>Screen is {{compCtrl.screen}}</p>
+<div style="text-align: center">
+
+    <div class="marvel-device nexus5" style="margin-top: 5em;">
+        <div class="top-bar"></div>
+        <div class="sleep"></div>
+        <div class="volume"></div>
+        <div class="camera"></div>
+        <div class="screen">
+            <div style="background-color: white; height: 100%;">
+                <h2 style="color:black">Hi2</h2>
+
+            </div>
+            <!-- Content goes here -->
+        </div>
+    </div>
+</div>
