:rainbow: Back to work, creating multiple screens in device

--- a/app/components/devicePreview/DevicePreview.html
+++ b/app/components/devicePreview/DevicePreview.html
@@ -6,8 +6,17 @@
         <div class="volume"></div>
         <div class="camera"></div>
         <div class="screen">
+            <div id="aboutScreen">
+
+            </div>
+            <div id="imagesScreen">
+
+            </div>
+            <div id="hoursScreen">
+
+            </div>
             <div style="background-color: white; height: 100%;">
-                <h2 style="color:black">Hi2</h2>
+                <h2 style="color:black">Ram Yarhi</h2>
 
             </div>
             <!-- Content goes here -->
