--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,5 +1,14 @@
 <div class="row max-width margin-auto">
     <div class="col-md-6 " style="background-color: yellow;">
+        <button ng-click="main.toggleScreen('about');">
+            About Us
+        </button>
+        <button ng-click="main.toggleScreen('images');">
+            Images
+        </button>
+        <button ng-click="main.toggleScreen('hours');">
+            Opening Hours
+        </button>
         <app-editor/>
     </div>
     <div class="col-md-6 ">
