--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,3 +1,4 @@
+<!--controller as main-->
 <div class="row max-width margin-auto">
     <div class="col-md-6 " style="background-color: yellow;">
         <button ng-click="main.toggleScreen('about');">
