:construction: Connected app editor to the preview via shared obj

--- a/app/components/AppEditor/AppEditor.html
+++ b/app/components/AppEditor/AppEditor.html
@@ -1,1 +1,11 @@
-<p>Editors</p>
+<div>
+    <div class="editor" ng-if="compCtrl.screen == 'ABOUT'">
+        about
+    </div>
+    <div class="editor" ng-if="compCtrl.screen == 'IMAGES'">
+        images
+    </div>
+    <div class="editor" ng-if="compCtrl.screen == 'HOURS'">
+        hours
+    </div>
+</div>
