--- a/app/components/AppEditor/AppEditor.html
+++ b/app/components/AppEditor/AppEditor.html
@@ -17,7 +17,18 @@
         </div>
     </div>
     <div class="editor" ng-if="compCtrl.screen == 'IMAGES'">
-        images
+        <div class="editor-title">
+            Images
+        </div>
+        <div class="editor-content">
+            <div class="row">
+                Picture token: <input type="text" placeholder="name" ng-model="compCtrl.data.name">
+            </div>
+            <p>or</p>
+            <div class="row">
+                search: <input type="text" placeholder="http://my-site.somewhere" ng-model="compCtrl.data.websiteURL">
+            </div>
+        </div>
     </div>
     <div class="editor" ng-if="compCtrl.screen == 'HOURS'">
         hours
