:construction: Working on fetch service

--- a/app/components/AppEditor/AppEditor.html
+++ b/app/components/AppEditor/AppEditor.html
@@ -22,7 +22,7 @@
         </div>
         <div class="editor-content">
             <div class="row">
-                Picture token: <input type="text" placeholder="name" ng-model="compCtrl.data.name">
+                Picture token: <input type="text" placeholder="name" ng-model="compCtrl.imgToken"> <button ng-click="compCtrl.getByQuery()">fetch</button>
             </div>
             <p>or</p>
             <div class="row">
