:construction: Got the pic getter to work

--- a/app/components/AppEditor/AppEditor.html
+++ b/app/components/AppEditor/AppEditor.html
@@ -22,11 +22,11 @@
         </div>
         <div class="editor-content">
             <div class="row">
-                Picture token: <input type="text" placeholder="name" ng-model="compCtrl.imgToken"> <button ng-click="compCtrl.getByQuery()">fetch</button>
+                Picture token: <input type="text" placeholder="name" ng-model="compCtrl.imgID"> <button ng-click="compCtrl.getByID()">fetch</button>
             </div>
             <p>or</p>
             <div class="row">
-                search: <input type="text" placeholder="http://my-site.somewhere" ng-model="compCtrl.data.websiteURL">
+                search: <input type="text" placeholder="http://my-site.somewhere" ng-model="compCtrl.imgQuery">
             </div>
         </div>
     </div>
