--- a/app/components/devicePreview/DevicePreview.html
+++ b/app/components/devicePreview/DevicePreview.html
@@ -23,11 +23,9 @@
                     <p>Images</p>
                 </div>
                 <div class="screen-content">
-                    name: {{compCtrl.data.name}}
-                    <br>
-                    description: {{compCtrl.data.description}}
-                    <br>
-                    website: {{compCtrl.data.websiteURL}}
+                    <div ng-if="compCtrl.data.imgURL">
+                        <img ng-src="{{compCtrl.data.imgURL}}" alt="">
+                    </div>
                 </div>
             </div>
             <div ng-if="compCtrl.screen == 'HOURS'" id="hoursScreen" class="device-screen">
