:bug: Fixes in order to compile

--- a/app/components/devicePreview/DevicePreview.html
+++ b/app/components/devicePreview/DevicePreview.html
@@ -23,7 +23,7 @@
                     <p>Images</p>
                 </div>
                 <div ng-if="!!compCtrl.data.loading" class="screen-content">
-                    <img src="./../../images/ajax-loader.gif" alt="">
+                    <img src="../../images/yeoman.png" alt="">
                 </div>
                 <div class="screen-content" ng-if="!compCtrl.data.loading">
                     <div ng-if="compCtrl.data.imgURL">
