--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,6 +1,7 @@
 /*FONT REQ*/
 @import 'https://fonts.googleapis.com/css?family=Roboto:300,400,500';
-@import '/app/components/devicePreview/DevicePreviewStyles.css';
+@import './../components/devicePreview/DevicePreviewStyles.css';
+@import './../components/AppEditor/AppEditor.css';
 
 /*DOM bound css*/
 body, html {
