--- a/app/components/AppEditor/AppEditor.css
+++ b/app/components/AppEditor/AppEditor.css
@@ -23,3 +23,18 @@ textarea, input{
 textarea:focus, input:focus{
     border-bottom:2px solid lightseagreen;
 }
+
+.company-name{
+    font-family: 'Roboto', sans-serif;
+    font-size: 1.5em;
+}
+.company-description{
+    background-color: transparent;
+    height:800px;
+    width:300px;
+    resize: none;
+    border:0;
+}
+.company-description:active{
+    border: 0!important;
+}
