--- a/app/components/devicePreview/DevicePreview.html
+++ b/app/components/devicePreview/DevicePreview.html
@@ -31,7 +31,11 @@
                     <img src="../../images/ajax-loader.gif" alt="">
                 </div>
                 <div class="screen-content" ng-if="!compCtrl.data.loading">
-                    <div ng-if="compCtrl.data.imgURL">
+                    <div>
+                        <p class="company-name">We are beautiful!</p>
+                        <p>Don't believe? see for yourself!</p>
+                    </div>
+                    <div ng-if="compCtrl.data.imgURL" class="mobile-image">
                         <img ng-src="{{compCtrl.data.imgURL}}" alt="">
                     </div>
                 </div>
