--- a/app/components/AppEditor/AppEditor.html
+++ b/app/components/AppEditor/AppEditor.html
@@ -87,6 +87,19 @@
         </div>
     </div>
     <div class="editor" ng-if="compCtrl.screen == 'HOURS'">
-        hours
+        <div class="editor-content">
+            <p>Supply activity hours for your business</p>
+        </div>
+        <div class="row hours-container">
+            <div class="col-md-6">
+                <input class="day-input" type="text" placeholder="from">
+                -
+                <input class="day-input" type="text" placeholder="to">
+                at
+                <input class="day-input" type="time" placeholder="from">
+                -
+                <input class="day-input" type="time" placeholder="from">
+            </div>
+        </div>
     </div>
 </div>
