--- a/app/components/AppEditor/AppEditor.css
+++ b/app/components/AppEditor/AppEditor.css
@@ -69,3 +69,10 @@ textarea:focus, input:focus{
     box-shadow: 0 10px 6px -6px #777;
     border:3px solid rgba(80, 205, 255,0.8);
 }
+.day-input{
+    width:100px;
+}
+.hours-container{
+    display: flex;
+    justify-content:space-between;
+}
