--- a/app/components/devicePreview/DevicePreview.html
+++ b/app/components/devicePreview/DevicePreview.html
@@ -46,8 +46,10 @@
                 </div>
                 <div class="screen-content">
                     <div class="row">
-                        <div class="col-md-4" ng-repeat="hour in compCtrl.hours">
-                            {{hour.dayFrom}} {{hour.dayTo == hour.dayFrom? '' :hours.dayTo}} | {{hour.hourFrom}} - {{hour.hourTo}}
+                        <div class="col-md-12" ng-repeat="hour in compCtrl.data.hours">
+                            <p ng-if="hour.dayFrom">
+                                {{hour.dayFrom}}{{hour.dayTo == hour.dayFrom? '' :' - '+hour.dayTo}} | {{hour.hourFrom}} - {{hour.hourTo}}
+                            </p>
                         </div>
                     </div>
                 </div>
